kubernetes/apps/network/internal/remote-services/services/bazarr.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/service.json
kind: Service
apiVersion: v1
metadata:
  name: remote-internal-bazarr
  namespace: network
spec:
  ports:
    - port: 6767
      protocol: TCP
      targetPort: 6767
      name: http
  type: ExternalName
  externalName: zeus.nas.home.internal
# ---
# # yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/endpointslice.json
# apiVersion: discovery.k8s.io/v1
# kind: EndpointSlice
# metadata:
#   name: remote-internal-bazarr
#   namespace: network
#   labels:
#     kubernetes.io/service-name: remote-internal-bazarr
# addressType: IPv4
# ports:
#   - port: 6767
# endpoints:
#   - addresses:
#     - zeus.nas.home.internal
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote-internal-bazarr
  namespace: network
  annotations:
    # external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
    error-pages.home.arpa/enabled: "true"
    authentik.home.arpa/enabled: "true"
    gethomepage.dev/app: "bazarr"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "bazarr"
    gethomepage.dev/description: "Subtitle Manager"
    gethomepage.dev/href: "https://apps.${SECRET_DOMAIN}/bazarr"
    gethomepage.dev/group: "Media Organization"
    gethomepage.dev/icon: "bazarr.png"
    gethomepage.dev/widget.type: "bazarr"
    gethomepage.dev/widget.url: http://zeus.nas.home.internal:6767/bazarr
    gethomepage.dev/widget.key: "${HOMEPAGE_VAR_BAZARR_KEY}"
    gethomepage.dev/siteMonitor: http://zeus.nas.home.internal:6767
spec:
  ingressClassName: internal
  rules:
    - host: "apps.${SECRET_DOMAIN}"
      http:
        paths:
        - path: /bazarr
          pathType: Prefix
          backend:
            service:
              name: remote-internal-bazarr
              port:
                number: 6767
  tls:
    - hosts:
        - "apps.${SECRET_DOMAIN}"
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
